...
    func getProfileDetails() -> Profile? {
        guard let profile = profileService.profile else { return nil }
        return profile
    }
    
    func prepareAlert() -> (title: String, message: String, actionYes: String, actionNo: String) {
        let title = "Oй все, пока!"
        let message = "Тебе лишь бы уйти, да?!"
        let actionYes = "Да"
        let actionNo = "Нет"
        return (title, message, actionYes, actionNo)
    }
    
    func cleanAndSwitchToSplashView() {
        WebViewPresenter.clean()
...
